appId: com.riccardopinato.agenda_per_anna
---
- back
- extendedWaitUntil:
    visible: "(La mia agenda|My agenda|Mi agenda|Mon agenda|A minha agenda)"
    timeout: 10000
- tapOn:
    text: "Cloud"
- extendedWaitUntil:
    visible: "Account e sincronizzazione"
    timeout: 10000
