appId: com.riccardopinato.agenda_per_anna
---
- tapOn:
    text: 'Home[\s\S]*'
    retryTapIfNoChange: true
- tapOn:
    text: '(Backup)'
- extendedWaitUntil:
    visible: '(Backup e dati|Backup and data|Copia y datos|Sauvegarde et données|Backup e dados)'
    timeout: 10000
- assertVisible:
    text: '(Crea backup completo|Create full backup|Crear copia completa|Créer une sauvegarde complète|Criar backup completo)[\s\S]*'
- assertVisible:
    text: '(Ripristina da file|Restore from file|Restaurar desde archivo|Restaurer depuis un fichier|Restaurar de ficheiro)[\s\S]*'
- scrollUntilVisible:
    element:
      text: '(Esporta archivio aperto|Export open archive|Exportar archivo abierto|Exporter l’archive ouverte|Exportar arquivo aberto)[\s\S]*'
    direction: DOWN
    timeout: 10000
- assertVisible:
    text: '(Esporta archivio aperto|Export open archive|Exportar archivo abierto|Exporter l’archive ouverte|Exportar arquivo aberto)[\s\S]*'
- assertVisible:
    text: '(Verifica integrità locale|Verify local integrity|Verificar integridad local|Vérifier l’intégrité locale|Verificar integridade local)[\s\S]*'
- back
- extendedWaitUntil:
    visible: "(La mia agenda|My agenda|Mi agenda|Mon agenda|A minha agenda)"
    timeout: 10000
