appId: com.riccardopinato.agenda_per_anna
---
- tapOn:
    text: 'Home[\s\S]*'
    retryTapIfNoChange: true
- scrollUntilVisible:
    element:
      text: '(Esplora|Explore|Explorar|Explorer)[\s\S]*'
    direction: DOWN
    timeout: 10000
- tapOn:
    text: '(Esplora|Explore|Explorar|Explorer)[\s\S]*'
- extendedWaitUntil:
    visible: '(Esplora|Explore|Explorar|Explorer)'
    timeout: 10000
- scrollUntilVisible:
    element:
      text: '(I miei ricordi|My memories|Mis recuerdos|Mes souvenirs|As minhas memórias)[\s\S]*'
    direction: DOWN
    timeout: 10000
- tapOn:
    text: '(I miei ricordi|My memories|Mis recuerdos|Mes souvenirs|As minhas memórias)[\s\S]*'
- extendedWaitUntil:
    visible: '(I miei ricordi|My memories|Mis recuerdos|Mes souvenirs|As minhas memórias)'
    timeout: 10000
- assertVisible:
    text: '(Riscopri|Rediscover|Redescubrir|Redécouvrir|Redescobrir)[\s\S]*'
- tapOn:
    text: '(Riscopri|Rediscover|Redescubrir|Redécouvrir|Redescobrir)[\s\S]*'
- extendedWaitUntil:
    visible: '(Riscopri i tuoi ricordi|Rediscover your memories|Redescubre tus recuerdos|Redécouvre tes souvenirs|Redescobre as tuas memórias)'
    timeout: 10000
