appId: com.riccardopinato.agenda_per_anna
---
- back
- extendedWaitUntil:
    visible: 'Home[\s\S]*'
    timeout: 10000
- tapOn:
    text: 'Home[\s\S]*'
    retryTapIfNoChange: true
- scrollUntilVisible:
    element:
      text: 'Modelli personali[\s\S]*'
    direction: DOWN
    timeout: 10000
- tapOn:
    text: 'Modelli personali[\s\S]*'
- extendedWaitUntil:
    visible: "Modelli personali"
    timeout: 10000
