appId: com.riccardopinato.agenda_per_anna
---
- tapOn:
    text: "(Oggi|Today|Hoy|Aujourd’hui|Hoje)[\\s\\S]*"
    retryTapIfNoChange: true
- extendedWaitUntil:
    visible: '(La mia giornata|My day|Mi día|Ma journée|O meu dia)[\s\S]*'
    timeout: 10000
- extendedWaitUntil:
    visible: '(Cattura|Capture|Capturar|Capturer)'
    timeout: 10000
- tapOn: '(Cattura|Capture|Capturar|Capturer)'
- extendedWaitUntil:
    visible: '(Scrivi un momento|Write a moment|Escribir un momento|Écrire un moment|Escrever um momento)[\s\S]*'
    timeout: 10000
- extendedWaitUntil:
    visible: '(Nota vocale|Voice note|Nota de voz|Note vocale)[\s\S]*'
    timeout: 10000
- extendedWaitUntil:
    visible: '(Foto|Photo)[\s\S]*'
    timeout: 10000
- scrollUntilVisible:
    element:
      text: '(Chiudi|Close|Cerrar|Fermer|Fechar)'
    direction: DOWN
    timeout: 10000
- tapOn: '(Chiudi|Close|Cerrar|Fermer|Fechar)'
- scrollUntilVisible:
    element:
      text: "Momenti del giorno[\\s\\S]*"
    direction: DOWN
    timeout: 10000
